<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/sign_in_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/sign_in_activity_sign_in_constraint_layout_background_color">

	<ImageView
		android:id="@+id/bg_image_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/bg"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="0dp"/>

	<Button
		android:id="@+id/don_thave_an_accoun_button"
		android:layout_width="@dimen/sign_in_activity_don_thave_an_accoun_button_width"
		android:layout_height="@dimen/sign_in_activity_don_thave_an_accoun_button_height"
		android:layout_marginBottom="@dimen/sign_in_activity_don_thave_an_accoun_button_margin_bottom"
		android:background="?attr/selectableItemBackground"
		android:fontFamily="@font/font_montserrat_semibold"
		android:gravity="left"
		android:lineSpacingMultiplier="1"
		android:text="@string/sign_in_activity_don_thave_an_accoun_button_text"
		android:textColor="@color/sign_in_activity_don_thave_an_accoun_button_text_color"
		android:textSize="@dimen/sign_in_activity_don_thave_an_accoun_button_text_size"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="62dp"
		tools:layout_editor_absoluteY="658dp"/>

	<Button
		android:id="@+id/button_button"
		android:layout_width="@dimen/sign_in_activity_button_button_width"
		android:layout_height="@dimen/sign_in_activity_button_button_height"
		android:layout_marginBottom="@dimen/sign_in_activity_button_button_margin_bottom"
		android:background="@drawable/sign_in_activity_button_button_selector"
		android:fontFamily="@font/font_montserrat_bold"
		android:gravity="center"
		android:lineSpacingMultiplier="1"
		android:text="@string/sign_in_activity_button_button_text"
		android:textColor="@color/sign_in_activity_button_button_text_color"
		android:textSize="@dimen/sign_in_activity_button_button_text_size"
		app:layout_constraintBottom_toTopOf="@+id/don_thave_an_accoun_button"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		tools:layout_editor_absoluteX="59dp"
		tools:layout_editor_absoluteY="560dp"/>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/form_constraint_layout"
		android:layout_width="@dimen/sign_in_activity_form_constraint_layout_width"
		android:layout_height="@dimen/sign_in_activity_form_constraint_layout_height"
		android:layout_marginTop="@dimen/sign_in_activity_form_constraint_layout_margin_top"
		android:background="@drawable/sign_in_activity_form_constraint_layout_background"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/log_in_text_view"
		tools:layout_editor_absoluteX="49dp"
		tools:layout_editor_absoluteY="210dp">
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/group_constraint_layout"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginBottom="@dimen/sign_in_activity_group_constraint_layout_margin_bottom"
			android:layout_marginLeft="@dimen/sign_in_activity_group_constraint_layout_margin_start"
			android:layout_marginRight="@dimen/sign_in_activity_group_constraint_layout_margin_end"
			android:layout_marginTop="@dimen/sign_in_activity_group_constraint_layout_margin_top"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="40dp"
			tools:layout_editor_absoluteY="63dp">
		
			<TextView
				android:id="@+id/forgot_password_text_view"
				android:layout_width="@dimen/sign_in_activity_forgot_password_text_view_width"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/sign_in_activity_forgot_password_text_view_margin_bottom"
				android:layout_marginRight="@dimen/sign_in_activity_forgot_password_text_view_margin_end"
				android:fontFamily="@font/font_montserrat_medium"
				android:gravity="right"
				android:letterSpacing="0.06"
				android:lineSpacingMultiplier="1.2"
				android:text="@string/sign_in_activity_forgot_password_text_view_text"
				android:textColor="@color/sign_in_activity_forgot_password_text_view_text_color"
				android:textSize="@dimen/sign_in_activity_forgot_password_text_view_text_size"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="146dp"/>
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/input_constraint_layout"
				android:layout_width="0dp"
				android:layout_height="@dimen/sign_in_activity_input_constraint_layout_height"
				android:layout_marginTop="@dimen/sign_in_activity_input_constraint_layout_margin_top"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/input_two_constraint_layout"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="74dp">
			
				<EditText
					android:id="@+id/line_edit_text"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:background="@drawable/sign_in_activity_line_edit_text_background"
					android:fontFamily="@font/font_sfnstext"
					android:gravity="left"
					android:lineSpacingMultiplier="1"
					android:textColor="@color/sign_in_activity_line_edit_text_text_color"
					android:textSize="@dimen/sign_in_activity_line_edit_text_text_size"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="46dp"/>
			
				<android.support.constraint.ConstraintLayout
					android:id="@+id/icons_eye_constraint_layout"
					android:layout_width="@dimen/sign_in_activity_icons_eye_constraint_layout_width"
					android:layout_height="@dimen/sign_in_activity_icons_eye_constraint_layout_height"
					android:layout_marginTop="@dimen/sign_in_activity_icons_eye_constraint_layout_margin_top"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/password_text_view"
					tools:layout_editor_absoluteX="221dp"
					tools:layout_editor_absoluteY="23dp">
				
					<ImageView
						android:id="@+id/icon_image_view"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:src="@drawable/icon_2"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						tools:layout_editor_absoluteX="0dp"
						tools:layout_editor_absoluteY="2dp"/>
				
					<android.support.constraint.ConstraintLayout
						android:id="@+id/base_constraint_layout"
						android:layout_width="0dp"
						android:layout_height="@dimen/sign_in_activity_base_constraint_layout_height"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						tools:layout_editor_absoluteX="0dp"
						tools:layout_editor_absoluteY="0dp"/>
				</android.support.constraint.ConstraintLayout>
			
				<TextView
					android:id="@+id/password_text_view"
					android:layout_width="@dimen/sign_in_activity_password_text_view_width"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/sign_in_activity_password_text_view_margin_top"
					android:fontFamily="@font/font_montserrat_medium"
					android:gravity="left"
					android:letterSpacing="0.06"
					android:lineSpacingMultiplier="1.2"
					android:text="@string/sign_in_activity_password_text_view_text"
					android:textColor="@color/sign_in_activity_password_text_view_text_color"
					android:textSize="@dimen/sign_in_activity_password_text_view_text_size"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="-2dp"/>
			</android.support.constraint.ConstraintLayout>
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/input_two_constraint_layout"
				android:layout_width="0dp"
				android:layout_height="@dimen/sign_in_activity_input_two_constraint_layout_height"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="0dp">
			
				<EditText
					android:id="@+id/line_two_edit_text"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:background="@drawable/sign_in_activity_line_two_edit_text_background"
					android:fontFamily="@font/font_sfnstext"
					android:gravity="left"
					android:lineSpacingMultiplier="1"
					android:textColor="@color/sign_in_activity_line_two_edit_text_text_color"
					android:textSize="@dimen/sign_in_activity_line_two_edit_text_text_size"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="46dp"/>
			
				<TextView
					android:id="@+id/email_text_view"
					android:layout_width="@dimen/sign_in_activity_email_text_view_width"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/sign_in_activity_email_text_view_margin_top"
					android:fontFamily="@font/font_montserrat_medium"
					android:gravity="left"
					android:letterSpacing="0.06"
					android:lineSpacingMultiplier="1.2"
					android:text="@string/sign_in_activity_email_text_view_text"
					android:textColor="@color/sign_in_activity_email_text_view_text_color"
					android:textSize="@dimen/sign_in_activity_email_text_view_text_size"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="-2dp"/>
			</android.support.constraint.ConstraintLayout>
		</android.support.constraint.ConstraintLayout>
	</android.support.constraint.ConstraintLayout>

	<TextView
		android:id="@+id/log_in_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/sign_in_activity_log_in_text_view_margin_top"
		android:fontFamily="@font/font_montserrat_bold"
		android:gravity="center"
		android:lineSpacingMultiplier="0.7"
		android:text="@string/sign_in_activity_log_in_text_view_text"
		android:textColor="@color/sign_in_activity_log_in_text_view_text_color"
		android:textSize="@dimen/sign_in_activity_log_in_text_view_text_size"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="157dp"
		tools:layout_editor_absoluteY="138dp"/>

	<TextView
		android:id="@+id/thengapal_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginRight="@dimen/sign_in_activity_thengapal_text_view_margin_end"
		android:layout_marginTop="@dimen/sign_in_activity_thengapal_text_view_margin_top"
		android:fontFamily="@font/font_koliko_regular"
		android:gravity="left"
		android:lineSpacingMultiplier="1"
		android:text="@string/sign_in_activity_thengapal_text_view_text"
		android:textColor="@color/sign_in_activity_thengapal_text_view_text_color"
		android:textSize="@dimen/sign_in_activity_thengapal_text_view_text_size"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="259dp"
		tools:layout_editor_absoluteY="60dp"/>
</android.support.constraint.ConstraintLayout>