<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/home_constraint_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/home_activity_home_constraint_layout_background_color">

	<android.support.constraint.ConstraintLayout
		android:id="@+id/group_constraint_layout"
		android:layout_width="@dimen/home_activity_group_constraint_layout_width"
		android:layout_height="@dimen/home_activity_group_constraint_layout_height"
		android:layout_marginTop="@dimen/home_activity_group_constraint_layout_margin_top"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/header_constraint_layout"
		tools:layout_editor_absoluteX="20dp"
		tools:layout_editor_absoluteY="125dp">
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/home_card_constraint_layout"
			android:layout_width="@dimen/home_activity_home_card_constraint_layout_width"
			android:layout_height="@dimen/home_activity_home_card_constraint_layout_height"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="196dp"
			tools:layout_editor_absoluteY="0dp">
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/home_card_two_constraint_layout"
				android:layout_width="0dp"
				android:layout_height="@dimen/home_activity_home_card_two_constraint_layout_height"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="0dp">
			
				<ImageView
					android:id="@+id/card_image_image_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:background="@drawable/home_activity_card_image_image_view_background"
					android:src="@drawable/card_image_2"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="0dp"/>
			
				<TextView
					android:id="@+id/card_title_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginRight="@dimen/home_activity_card_title_text_view_margin_end"
					android:layout_marginTop="@dimen/home_activity_card_title_text_view_margin_top"
					android:fontFamily="@font/font_montserrat_bold"
					android:gravity="left"
					android:lineSpacingMultiplier="1.44"
					android:text="@string/home_activity_card_title_text_view_text"
					android:textColor="@color/home_activity_card_title_text_view_text_color"
					android:textSize="@dimen/home_activity_card_title_text_view_text_size"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/card_image_image_view"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="146dp"/>
			
				<TextView
					android:id="@+id/never_bother_anyone_text_view"
					android:layout_width="@dimen/home_activity_never_bother_anyone_text_view_width"
					android:layout_height="wrap_content"
					android:fontFamily="@font/font_montserrat_regular"
					android:gravity="left"
					android:lineSpacingMultiplier="1.33"
					android:text="@string/home_activity_never_bother_anyone_text_view_text"
					android:textColor="@color/home_activity_never_bother_anyone_text_view_text_color"
					android:textSize="@dimen/home_activity_never_bother_anyone_text_view_text_size"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/card_title_text_view"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="172dp"/>
			</android.support.constraint.ConstraintLayout>
		</android.support.constraint.ConstraintLayout>
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/home_card_three_constraint_layout"
			android:layout_width="@dimen/home_activity_home_card_three_constraint_layout_width"
			android:layout_height="@dimen/home_activity_home_card_three_constraint_layout_height"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="0dp">
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/home_card_four_constraint_layout"
				android:layout_width="0dp"
				android:layout_height="@dimen/home_activity_home_card_four_constraint_layout_height"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="0dp">
			
				<ImageView
					android:id="@+id/card_image_two_image_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:background="@drawable/home_activity_card_image_two_image_view_background"
					android:src="@drawable/card_image"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="0dp"/>
			
				<TextView
					android:id="@+id/card_title_two_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginRight="@dimen/home_activity_card_title_two_text_view_margin_end"
					android:layout_marginTop="@dimen/home_activity_card_title_two_text_view_margin_top"
					android:fontFamily="@font/font_montserrat_bold"
					android:gravity="left"
					android:lineSpacingMultiplier="1.44"
					android:text="@string/home_activity_card_title_two_text_view_text"
					android:textColor="@color/home_activity_card_title_two_text_view_text_color"
					android:textSize="@dimen/home_activity_card_title_two_text_view_text_size"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/card_image_two_image_view"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="146dp"/>
			
				<TextView
					android:id="@+id/never_bother_anyone_two_text_view"
					android:layout_width="@dimen/home_activity_never_bother_anyone_two_text_view_width"
					android:layout_height="wrap_content"
					android:fontFamily="@font/font_montserrat_regular"
					android:gravity="left"
					android:lineSpacingMultiplier="1.33"
					android:text="@string/home_activity_never_bother_anyone_two_text_view_text"
					android:textColor="@color/home_activity_never_bother_anyone_two_text_view_text_color"
					android:textSize="@dimen/home_activity_never_bother_anyone_two_text_view_text_size"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/card_title_two_text_view"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="172dp"/>
			</android.support.constraint.ConstraintLayout>
		</android.support.constraint.ConstraintLayout>
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/home_card_five_constraint_layout"
			android:layout_width="@dimen/home_activity_home_card_five_constraint_layout_width"
			android:layout_height="@dimen/home_activity_home_card_five_constraint_layout_height"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			tools:layout_editor_absoluteX="196dp"
			tools:layout_editor_absoluteY="290dp">
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/home_card_six_constraint_layout"
				android:layout_width="0dp"
				android:layout_height="@dimen/home_activity_home_card_six_constraint_layout_height"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="0dp">
			
				<ImageView
					android:id="@+id/card_image_three_image_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:background="@drawable/home_activity_card_image_three_image_view_background"
					android:src="@drawable/card_image_4"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="0dp"/>
			
				<TextView
					android:id="@+id/card_title_three_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginRight="@dimen/home_activity_card_title_three_text_view_margin_end"
					android:layout_marginTop="@dimen/home_activity_card_title_three_text_view_margin_top"
					android:fontFamily="@font/font_montserrat_bold"
					android:gravity="left"
					android:lineSpacingMultiplier="1.44"
					android:text="@string/home_activity_card_title_three_text_view_text"
					android:textColor="@color/home_activity_card_title_three_text_view_text_color"
					android:textSize="@dimen/home_activity_card_title_three_text_view_text_size"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/card_image_three_image_view"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="146dp"/>
			
				<TextView
					android:id="@+id/never_bother_anyone_three_text_view"
					android:layout_width="@dimen/home_activity_never_bother_anyone_three_text_view_width"
					android:layout_height="wrap_content"
					android:fontFamily="@font/font_montserrat_regular"
					android:gravity="left"
					android:lineSpacingMultiplier="1.33"
					android:text="@string/home_activity_never_bother_anyone_three_text_view_text"
					android:textColor="@color/home_activity_never_bother_anyone_three_text_view_text_color"
					android:textSize="@dimen/home_activity_never_bother_anyone_three_text_view_text_size"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/card_title_three_text_view"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="172dp"/>
			</android.support.constraint.ConstraintLayout>
		</android.support.constraint.ConstraintLayout>
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/home_card_seven_constraint_layout"
			android:layout_width="@dimen/home_activity_home_card_seven_constraint_layout_width"
			android:layout_height="@dimen/home_activity_home_card_seven_constraint_layout_height"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="290dp">
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/home_card_eight_constraint_layout"
				android:layout_width="0dp"
				android:layout_height="@dimen/home_activity_home_card_eight_constraint_layout_height"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="0dp"
				tools:layout_editor_absoluteY="0dp">
			
				<ImageView
					android:id="@+id/card_image_four_image_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:background="@drawable/home_activity_card_image_four_image_view_background"
					android:src="@drawable/card_image_3"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="0dp"/>
			
				<TextView
					android:id="@+id/card_title_four_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginRight="@dimen/home_activity_card_title_four_text_view_margin_end"
					android:layout_marginTop="@dimen/home_activity_card_title_four_text_view_margin_top"
					android:fontFamily="@font/font_montserrat_bold"
					android:gravity="left"
					android:lineSpacingMultiplier="1.44"
					android:text="@string/home_activity_card_title_four_text_view_text"
					android:textColor="@color/home_activity_card_title_four_text_view_text_color"
					android:textSize="@dimen/home_activity_card_title_four_text_view_text_size"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/card_image_four_image_view"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="146dp"/>
			
				<TextView
					android:id="@+id/never_bother_anyone_four_text_view"
					android:layout_width="@dimen/home_activity_never_bother_anyone_four_text_view_width"
					android:layout_height="wrap_content"
					android:layout_marginBottom="@dimen/home_activity_never_bother_anyone_four_text_view_margin_bottom"
					android:fontFamily="@font/font_montserrat_regular"
					android:gravity="left"
					android:lineSpacingMultiplier="1.33"
					android:text="@string/home_activity_never_bother_anyone_four_text_view_text"
					android:textColor="@color/home_activity_never_bother_anyone_four_text_view_text_color"
					android:textSize="@dimen/home_activity_never_bother_anyone_four_text_view_text_size"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="172dp"/>
			</android.support.constraint.ConstraintLayout>
		</android.support.constraint.ConstraintLayout>
	</android.support.constraint.ConstraintLayout>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/header_constraint_layout"
		android:layout_width="0dp"
		android:layout_height="@dimen/home_activity_header_constraint_layout_height"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:layout_editor_absoluteX="0dp"
		tools:layout_editor_absoluteY="0dp">
	
		<TextView
			android:id="@+id/center_text_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="@dimen/home_activity_center_text_text_view_margin_bottom"
			android:fontFamily="@font/font_montserrat_bold"
			android:gravity="center"
			android:lineSpacingMultiplier="0.82"
			android:text="@string/home_activity_center_text_text_view_text"
			android:textColor="@color/home_activity_center_text_text_view_text_color"
			android:textSize="@dimen/home_activity_center_text_text_view_text_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			tools:layout_editor_absoluteX="178dp"
			tools:layout_editor_absoluteY="57dp"/>
	
		<Button
			android:id="@+id/nav_header_button"
			android:layout_width="@dimen/home_activity_nav_header_button_width"
			android:layout_height="@dimen/home_activity_nav_header_button_height"
			android:layout_marginLeft="@dimen/home_activity_nav_header_button_margin_start"
			android:background="?attr/selectableItemBackground"
			android:fontFamily="@font/font_sfnstext"
			android:gravity="left"
			android:lineSpacingMultiplier="1"
			android:textColor="@color/home_activity_nav_header_button_text_color"
			android:textSize="@dimen/home_activity_nav_header_button_text_size"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			tools:layout_editor_absoluteX="15dp"
			tools:layout_editor_absoluteY="57dp"/>
	</android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>